Fix progress circle alignment

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
-* {
+/** {
     margin: auto;
-}
+}*/
 
 .hide {
     display: none;
@@ -8,8 +8,9 @@
 
 .mainContainer {
     display: block;
-    margin: 50px auto;
-    width: 800px;
+    margin: 50px auto 0 auto;
+    /*border: 1px solid purple;*/
+    /*width: 800px;*/
     text-align: center;
 }
 
@@ -41,20 +42,14 @@ h4 {
     text-align: center;
 }
 
-ul li {
-    display: inline-block;
-    margin: 50px auto;
-    width: 300px;
-    text-align: center;
-}
-
-header {
-    display: block;
-}
-
 .prog {
     display: block;
+    margin: auto;
     text-align: center;
+}
+
+i {
+    padding: 0 20px 0 20px;
 }
 
 .fa-circle {
